# mirage

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  shell.nix
crates/mirage-backend/: Cargo.toml
crates/mirage-backend/mirage-backend-asm/: Cargo.toml
crates/mirage-backend/mirage-backend-asm/src/: lib.rs
crates/mirage-backend/mirage-backend-asm/src/builder/: mod.rs
crates/mirage-backend/mirage-backend-codegen/: Cargo.toml
crates/mirage-backend/mirage-backend-codegen-asm/: Cargo.toml
crates/mirage-backend/mirage-backend-codegen-asm/src/: environement.rs
crates/mirage-backend/mirage-backend-codegen-llvm/: Cargo.toml
crates/mirage-backend/mirage-backend-codegen-llvm/src/: lib.rs  string.rs
crates/mirage-backend/mirage-backend-codegen-wasm/: Cargo.toml
crates/mirage-backend/mirage-backend-codegen-wasm/src/: lib.rs
crates/mirage-backend/mirage-backend-codegen/src/: lib.rs  register.rs
crates/mirage-backend/mirage-backend-llvm/: Cargo.toml  build.rs
crates/mirage-backend/mirage-backend-llvm/src/: builder.rs  context.rs  execution_engine.rs  ffi.rs  lib.rs  module.rs  pass_manager.rs  target.rs
crates/mirage-backend/mirage-backend-llvm/src/types/: array_types.rs  int_types.rs  mod.rs
crates/mirage-backend/mirage-backend-llvm/src/value/: function_value.rs  int_value.rs  mod.rs  struct_value.rs
crates/mirage-backend/mirage-backend-llvm/wrapper/: wrapper.cpp
crates/mirage-backend/mirage-backend-opti/: Cargo.toml
crates/mirage-backend/mirage-backend-opti/src/: lib.rs  oone.rs  opti.rs  ozero.rs
crates/mirage-backend/mirage-backend-output/: Cargo.toml
crates/mirage-backend/mirage-backend-output/src/: lib.rs
crates/mirage-backend/src/: codegen_llvm.rs  lib.rs  llvm.rs  opti.rs  output.rs
crates/mirage-frontend/: Cargo.toml
crates/mirage-frontend/mirage-frontend-ast/: Cargo.toml
crates/mirage-frontend/mirage-frontend-ast/src/: const_value.rs  external.rs  flag.rs  function.rs  global.rs  ident.rs  labels.rs  lib.rs  list.rs  module.rs  target.rs  typedef.rs
crates/mirage-frontend/mirage-frontend-builder/: Cargo.toml
crates/mirage-frontend/mirage-frontend-builder/src/: lib.rs  main.rs  test.rs
crates/mirage-frontend/mirage-frontend-config/: Cargo.toml
crates/mirage-frontend/mirage-frontend-config/src/: lib.rs
crates/mirage-frontend/mirage-frontend-module/: Cargo.toml
crates/mirage-frontend/mirage-frontend-module/src/: lib.rs
crates/mirage-frontend/mirage-frontend-object/: Cargo.toml
crates/mirage-frontend/mirage-frontend-object/src/: function.rs  lib.rs  meta.rs  size.rs  stringify.rs  types.rs  util.rs  values.rs
crates/mirage-frontend/mirage-frontend-object/src/label/: instr.rs  (+2 more)
crates/mirage-frontend/src/: builder.rs  lib.rs  module.rs  object.rs
(+9 files in other folders)
