[package]
name = "mirage_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirage_frontend_builder = { path = "mirage-frontend-builder" }
mirage_frontend_module = { path = "mirage-frontend-module" }
mirage_frontend_object = { path = "mirage-frontend-object" }
