[package]
name = "mirage_backend_codegen_asm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirage_frontend = { path = "../../mirage-frontend" }
mirage_backend_asm = { path = "../mirage-backend-asm" }
