[package]
name = "mirage_frontend_builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mirage_frontend_object = { path = "../mirage-frontend-object" }

[dependencies.mirage_frontend_module]
path = "../mirage-frontend-module"
